Fixed spacing issue for rendering code snippets

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,9 @@
     max-width: 100%;
     max-height: 100%;
 }
+
+
+.individual-chunk-with-photo {
+    margin: 0px;
+    /* padding: 0px; */
+}
